--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "@fontsource-variable/jost";
+import SmokeBack from "src/components/SmokeBack.astro";
 interface Props {
   title: string;
 }
@@ -13,12 +14,15 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <SmokeBack />
+    <div class="max-w-6xl px-10 pt-40 mx-auto">
+      <slot />
+    </div>
   </body>
 </html>
 <style is:global>
