Create cards input and label

--- a/src/components/HamburgerButton.astro
+++ b/src/components/HamburgerButton.astro
@@ -7,7 +7,7 @@ const genericHamburgerLine = `h-[2px] ${width} bg-gray-300 transition ease trans
 
 <button
   id={Astro.props.id}
-  aria-expanded="false"
+  aria-expanded="true"
   aria-controls={MOBILE_MENU_CONTENT_ID}
   class:list={[
     "hamburgerButton group relative flex h-[20px] flex-col items-center justify-between lg:hidden",
