--- a/src/components/SocialButtons.astro
+++ b/src/components/SocialButtons.astro
@@ -13,8 +13,8 @@ import XIcon from "../icons/x.astro";
       <a
         target="_blank"
         rel="noopener"
-        aria-label="Instagram de La Velada, se abrirá en una nueva pestaña"
-        href="https://www.instagram.com/infolavelada"
+        aria-label="Instagram, se abrirá en una nueva pestaña"
+        href="/"
         class="inline-block any-hover:scale-125 any-hover:opacity-70 motion-safe:transition motion-reduce:any-hover:scale-100"
       >
         <InstagramIcon
@@ -26,13 +26,13 @@ import XIcon from "../icons/x.astro";
       <a
         target="_blank"
         rel="noopener"
-        aria-label="X de La Velada, se abrirá en una nueva pestaña"
-        href="https://x.com/infoLaVelada"
+        aria-label="X, se abrirá en una nueva pestaña"
+        href=""
         class="inline-block any-hover:scale-125 any-hover:opacity-70 motion-safe:transition motion-reduce:any-hover:scale-100"
       >
-        <XIcon
+        <!-- <XIcon
           class="text-primary transition-colors duration-300 hover:text-accent motion-reduce:duration-0"
-        />
+        /> -->
       </a>
     </li>
     <li>
