--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,6 @@
 ---
-import DrawnXLogo from "../components/DrawnXLogo.astro";
-import FooterContent from "../components/FooterContent.astro";
 import HamburgerButton from "../components/HamburgerButton.astro";
 import HeroLogo from "../components/HeroLogo.astro";
-import SocialButtons from "../components/SocialButtons.astro";
 import { MOBILE_MENU_CONTENT_ID } from "../consts/mobile-menu";
 
 // remote last slash from pathname
@@ -59,7 +56,7 @@ const isCombatIntern = normalizedPathName.startsWith("/ruta2/");
         </>
       ))
     }
-    <a href="/" class="block lg:hidden"><DrawnXLogo class:list={"w-10"} /></a>
+    <a href="/" class="block lg:hidden"><HeroLogo class:list={"w-10"} /></a>
     <HamburgerButton class:list={"block lg:hidden"} id="menuButton" />
     <div
       class="fixed inset-0 z-[888] flex w-screen flex-col items-center overflow-x-auto bg-[var(--background-color)] px-10 lg:hidden"
@@ -107,8 +104,8 @@ const isCombatIntern = normalizedPathName.startsWith("/ruta2/");
           ))
         }
         <nav class="my-4 flex flex-col gap-10">
-          <FooterContent />
-          <SocialButtons class="flex items-center justify-center" />
+          <!-- <FooterContent /> -->
+          <!-- <SocialButtons class="flex items-center justify-center" /> -->
         </nav>
       </nav>
     </div>
