--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,37 +1,146 @@
 ---
+import { ViewTransitions } from "astro:transitions";
+import Header from "../components/Header.astro";
+import type { Preload } from "../types/Preload";
 import "@fontsource-variable/jost";
-import Header from "src/components/Header.astro";
+import SEO from "src/components/SEO.astro";
 import SmokeBack from "src/components/SmokeBack.astro";
+import Cards from "src/components/Cards.astro";
+
 interface Props {
   title: string;
+  description: string;
+  preload?: Array<Preload>;
+  canonical?: string;
+  image?: string;
 }
 
-const { title } = Astro.props;
+const { title, description, preload, canonical, image } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang="es" class="overflow-x-hidden">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <SEO
+      canonical={canonical}
+      description={description}
+      image={image}
+      preload={preload}
+      title={title}
+    />
+    <ViewTransitions />
   </head>
-  <body>
+
+  <body
+    class="overflow-x-hidden selection:bg-primary selection:text-secondary [&_:focus-visible]:outline-none [&_:focus-visible]:ring-2 [&_:focus-visible]:ring-primary"
+  >
+    <a
+      href="#main-content"
+      class="anchor-main-content fixed top-0 z-20 rounded-br-md bg-secondary px-3 py-5 text-primary opacity-0 focus:opacity-100"
+      >Saltar al contenido principal</a
+    >
     <SmokeBack />
     <Header />
-    <div class="max-w-6xl px-10 pt-40 mx-auto">
+    <main>
+      <Cards />
+    </main>
+    <div
+      class="mx-auto min-h-screen max-w-6xl px-2 pt-16 selection:bg-primary selection:text-secondary md:pt-20 lg:px-10"
+      id="main-content"
+    >
       <slot />
     </div>
+    <style is:global>
+      :root {
+        --color-primary: #ddd;
+        --color-secondary: #333;
+        --color-accent: #b4cd02;
+        --color-accent-rgb: 213, 255, 0;
+
+        --background-color: #141800;
+        --background-twitch: var(--color-twitch-ice);
+
+        --color-twitch: #9146ff;
+        --color-twitch-ice: #f0f0ff;
+      }
+
+      @font-face {
+        font-family: Atomic;
+        font-display: swap;
+        src: url("https://cdn.lavelada.dev/fonts/font-atomic.woff2")
+          format("woff2");
+      }
+
+      html {
+        font-family: "Jost Variable", system-ui, sans-serif;
+        background: var(--background-color);
+        scrollbar-gutter: stable;
+      }
+
+      main {
+        position: relative;
+      }
+
+      body {
+        &:has(dialog[open]) {
+          overflow: hidden;
+        }
+      }
+
+      /* Hiding class, making content visible only to screen readers but not visually */
+      /* "sr" meaning "screen-reader" */
+      .sr-only:not(:focus):not(:active) {
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+      }
+
+      @supports selector(::-webkit-scrollbar) {
+        @media (hover: hover) {
+          ::-webkit-scrollbar {
+            width: 10px;
+            border-radius: 10px;
+          }
+
+          ::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            background-color: theme("colors.primary");
+            border: 2px solid transparent;
+            background-clip: content-box;
+          }
+
+          ::-webkit-scrollbar-thumb:active {
+            background-color: #666;
+          }
+
+          ::-webkit-scrollbar-track {
+            background: var(--background-image);
+          }
+
+          ::-webkit-scrollbar-corner {
+            background: var(--background-image);
+          }
+        }
+      }
+
+      @supports not selector(::-webkit-scrollbar) {
+        * {
+          scrollbar-color: theme("colors.primary") transparent;
+          scrollbar-width: thin;
+        }
+      }
+
+      .anchor-main-content {
+        pointer-events: none;
+      }
+
+      .anchor-main-content:focus {
+        pointer-events: all;
+      }
+    </style>
   </body>
 </html>
-<style is:global>
-  html {
-    font-family:
-      "Jost Variable" system-ui,
-      sans-serif;
-    background: #ddd;
-  }
-</style>
